--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </div>
     </div> -->
-        <product-display :premium="premium" @add-to-cart="updateCart"></product-display>
+        <product-display :premium="premium" @add-to-cart="updateCart" @remove-from-cart="removeFromCart"></product-display>"></product-display>
     </div>
 
     <!-- Import Js -->
